fix: CSS bug that caused a gap on mobile nav when search was open.

--- a/src/wmnds/patterns/header-v2/_header-v2.scss
+++ b/src/wmnds/patterns/header-v2/_header-v2.scss
@@ -676,6 +676,7 @@ $header-height-mobile: 4rem;
 
   .wmnds-header--search-open {
     position: fixed;
+    top: 0;
     width: 100%;
 
     .wmnds-mega-menu__search-container {
